--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -68,6 +68,96 @@ h1 {
     font-weight: 600;
     border-radius: 5px;
 }
+/* ------------------------------ */
+/*     Overlay and Scoreboard     */
+/* ------------------------------ */
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.35);
+    z-index: 10; 
+    visibility: hidden;
+  }
+  
+  .modal {
+    background-color: #1A1D3A;
+    border-radius: 5px;
+    width: 350px;
+    height: 320px;
+    position: absolute;
+    top: 15%;
+    left: 41%;
+    padding: 15px;
+    z-index: 999;
+    color: #ffffff;
+    
+  
+  
+    h2 {
+      font-size: 24px;
+    }
+    #modal-title{
+      font-size: 28px;
+    }
+    p{
+      font-size: 20px;
+      margin: 20px 0;
+    }
+  }
+  
+  .score-box {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .score-button {
+    background-color: #2196F3;
+    color: #ffffff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .score-button:hover {
+    background-color: #0c7bb3;
+  }
+  
+  .score-button-invert {
+    background-color: #ffffff;
+    color: #2196F3;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .score-button-invert:hover {
+    background-color: #0c7bb3;
+  }
+  
+.input-name {
+
+}
+
+.input-button {
+
+}
+
+.score-board{
+    visibility: hidden;
+}
+.input-modal    {
+    visibility: hidden;
+}
+
 
 /* ------------------------------ */
 /*     responsiveness             */
